--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@
     background-color: var(--header-color);
     font-weight:500;
     height: 7vh;
-    width: 100%; /*maybe change*/
+    width: 100%; 
     position: fixed;
     top: 0;
     display: flex;
@@ -79,7 +79,7 @@
 
 
   nav{
-    display: flex;
+    display: none; /* change for flex if add new section */
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
@@ -121,7 +121,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     height: 30vh;
     width: 100%;
     margin-top: 7vh; 
@@ -134,6 +133,7 @@
     flex-direction: column;
     width: 60%;
     height: 90%;
+    text-align: center;
   }
 
   #about-image{
@@ -281,4 +281,61 @@
     border-top: 1px solid var(--border-color);
     background-color: var(--header-color);
     height: 3vh;
+  }
+
+  @media (max-width: 1000px) {
+    #skills-container{
+      background: none;
+    }
+  }
+
+  @media ( max-height: 1000px ) { 
+    #skills-container{
+      background: none;
+    }
+  }
+
+
+  @media (max-width: 670px) {
+    
+    #header-container{
+      justify-content: space-around;
+      height: 100%;
+      width: 80%;
+    }
+
+    #logo{
+      width: 50%;
+    }
+
+    nav{display: none;}
+
+    #action{
+      width: 50%;
+    }
+
+    #about-container{
+      justify-content: space-evenly;
+      width: 80%;
+      text-align: center;
+    }
+
+    #about-image{
+      display: none;
+    }
+
+    #skills-container{
+      justify-content: space-evenly;
+      width: 80%;
+    }
+
+    #skills-columns{
+      justify-content: space-around;
+      width: 100%;
+    }
+
+    #contact-container{
+      width: 80%;
+    }
+    
   }
