--- a/css/style.css
+++ b/css/style.css
@@ -141,10 +141,100 @@
   }
 
   #about-image img{
+    cursor:pointer;
     height: 100%;
     border-radius: 50%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
+
+  /* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  top: 7vh;
+  left: 25%;
+  width: 50%; /* Full width */
+  height: 60%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 40% !important;
+  max-width: 700px;
+  background-color: var(--main-bg-color);
+  cursor:auto !important;
+}
+
+/* Caption of Modal Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: var(--main-color);
+  padding: 10px 0;
+}
+
+#description{
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: justify;
+  padding: 10px 0;
+  height: 20%;
+}
+
+#description p{
+  color: #ccc;
+}
+
+/* Add Animation */
+.modal-content, #caption, #description {  
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+  from {-webkit-transform:scale(0)} 
+  to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+  from {transform:scale(0)} 
+  to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
 
   /* SKILLS */
 
@@ -224,6 +314,10 @@
     flex-direction: column;
     height: 100%;
     width: 100%;
+  }
+  .contact-types-box:hover{
+    box-shadow: 0 0 2px 1px var(--main-color);
+    transition: 1s;
   }
 
   #contact-description{
